Add Google site verification meta tag
Added Google site verification meta tag to the head section.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <title>IP Filter Exchange - Safe, Secure, Private & Free</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="GMr8jyXQH9F7l9JQFmCl9Z21B_vhoaH8G1vGpRhRQU0" />
 </head>
 <body>
     <!-- Navigation -->
@@ -142,4 +143,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
