--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -59,6 +59,10 @@
                 </div>
 
                 <!-- Section 2 -->
+                 <div class="policy-section">
+                    <h2>Compliance with Google Policies</h2>
+                    <p>The use of information received from Google APIs will adhere to the Chrome Web Store User Data Policy, including the Limited Use requirements. > Our extension only accesses necessary browser permissions to provide proxy connectivity and does not share or sell any user data to third parties.</p>
+                </div>
                 <div class="policy-section">
                     <h2>Zero Data Collection</h2>
                     <p>We do NOT collect, store, or transmit any of your personal data, browsing history, or proxy credentials to any external servers.  Your privacy is our top priority, and we have designed our extension to operate entirely locally on your device.</p>
@@ -195,4 +199,5 @@
 
     <script src="script. js"></script>
 </body>
+
 </html>
